# mm-dev

./: Cargo.toml  dict.dic  justfile  pyproject.toml  rustfmt.toml
src/: lib.rs
