[package]
name = "mm-dev"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
clap = { version = "4.5.16", features = ["derive"] }
dns-lookup = "2.0.4"
url = "2.5.2"
num = "0.4.3"
rand = "0.8.5"
