[package]
name = "mm-dev"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.7", features = ["blocking", "json", "socks"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.18", features = ["derive"] }
dns-lookup = "2.0.4"
url = "2.5.2"
num = "0.4.3"
rand = "0.8.5"
